added jquery to display family detail

--- a/mycha_mob/css/style.css
+++ b/mycha_mob/css/style.css
@@ -395,31 +395,35 @@ ul#idioma li a:active {
 {
 	color: #a7aa95;
 }
-#tea_listings {
+.tea_listings {
 	width: 65%;
 	display:flex;
 	flex-wrap: wrap;
 	/*justify-content: space-around;*/
 	/*padding: 0 2em;*/
 }
-#tea_listings > div {
+.tea_listings > div {
 	flex-basis:32%; /* width */
 	margin-bottom: .75em;
 	background-color:#fff;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-
 }
+#calming, #tonic, #detox, #beauty, #iced, #taylored {
+	display: none;
+}
+/*.hidden {
+	display:none;
+}
+.visible {
+	display:block;
+}*/
 .C h4 {color: #8ebbdd;}
 .T h4 {color: #ff2858;}
 .D h4 {color: #aecf2c;}
-.B h4 {color: #fb8109;}
+.B h4, .I h4, .T h4 {color: #a7aa95;}
 
-/*.tranquilas {background-color: #b5d0e6;}
-.tonicas {background-color: #fb424f;}
-.detox {background-color: #d0e65f;}
-.beauty {background-color: #ff8131;}*/
 .terms main h3 {
 	padding-top: 3em;
 	padding-bottom: 1.5em;
@@ -575,16 +579,19 @@ input#tswsubmit {
 	max-width: 15em;
 	max-height: 5em;
 }
-/*#mutante img {}
-#cotesud img {}
-#FT img {}
-#vogue img {}*/
 
 /*temp styles start*/
-#tea_listings h4 {
+.tea_listings h4 {
 	margin: 1.75em 0 .25em 4%;
 	line-height: 12px;
 	}
+.tea_listings h5 {
+	margin: 0 4% 5% 4%;
+}
+.tea_listings .descricao {
+	margin: 4% 4%;
+	font-size: .9em;
+}
 #conceito, #perfil {
 	display: flex;
 	flex-direction: row;
@@ -593,13 +600,6 @@ input#tswsubmit {
 }
 .descricao {
 	color: #767a72;
-}
-#tea_listings h5 {
-	margin: 0 4% 5% 4%;
-}
-#tea_listings .descricao {
-	margin: 4% 4%;
-	font-size: .9em;
 }
 .myCha{
 	text-transform:uppercase;
